egy hallgató akár több pontot is kaphat

--- a/src/gyak1.tex
+++ b/src/gyak1.tex
@@ -26,7 +26,7 @@
 
         \item A rivális Mercedes istálló legyőzésének érdekében egy új stratégiával rukkoltak elő a Ferrari fejesei. A szingapúri nagydíjon bevetik a $32$ kiállásos taktikát, melynek alapja, hogy minden kiállásnál az előzőtől különböző gumiszettet tesznek fel az autóra. Hányféle gumistratégiája lehet a Ferrari-nak, ha (egy kiskaput átjátszva) mind a $9$ fajta gumikeverékből végtelen sok áll a rendelkezésükre?
         
-        \item A $2019$-es félévben a $42$-es tankörbeli $35$ hallgató összesen $100$ pontot ért el a második számtud ZH-ján. Hányféleképpen történhetett ez meg, ha az egyes ZH pontszámok akármekkora nemnegatív egészek lehetnek?
+        \item A $2019$-es félévben a $42$-es tankörbeli $35$ hallgató összesen $100$ pontot ért el a második számtud ZH-ján (egy hallgató akár $100$ pontot is elérhet). Hányféleképpen történhetett ez meg, ha az egyes ZH pontszámok akármekkora nemnegatív egészek lehetnek?
         
         % \item Van-e olyan egyszerű gráf, aminek a fokszámai
         % \begin{enumerate}
