--- a/src/gyak5.tex
+++ b/src/gyak5.tex
@@ -23,33 +23,33 @@
     \noindent\makebox[\textwidth][c]{\Large A számítástudomány alapjai 2020. I. félév}
     \noindent\makebox[\textwidth][c]{\Large 5. gyakorlat}
     \begin{enumerate}
-        \item Az alábbi feszítőfákat az $a$ csúcsokból indított BFS után kaptuk meg. Hogy nézhetett ki az eredeti gráf az egyes esetekben? 
-        \begin{figure}[!h]
-            \centering
-            \begin{subfigure}{0.2\textwidth}
-                \centering
-                \includestandalone[width=0.7\textwidth]{../grafok/bfs_after_1}
-            \end{subfigure}
-            \begin{subfigure}{0.2\textwidth}
-                \centering		
-                \includestandalone[width=0.7\textwidth]{../grafok/bfs_after_2}
-            \end{subfigure}
-            \begin{subfigure}{0.2\textwidth}
-                \centering
-                \includestandalone[width=0.7\textwidth]{../grafok/bfs_after_3}
-            \end{subfigure}
-            \begin{subfigure}{0.2\textwidth}
-                \centering
-                \includestandalone[width=0.7\textwidth]{../grafok/bfs_after_4}
-            \end{subfigure}
-        \end{figure}
-
-        \item Határozzuk meg a legrövidebb utakat az alábbi gráfokban az $s$ és a $t$ csúcs között!
+        \item Indítsunk BFS-t az alábbi gráfok súlyozatlan változatának az $s$ pontjaiból! Határozzuk meg a legrövidebb utakat az alábbi súlyozott gráfokban az $s$ és a $t$ csúcs között!
         \begin{figure}[!h]
             \centering \hfill
             \includestandalone[scale=0.7]{../grafok/dijkstra1}\hfill
             \includestandalone[scale=0.7]{../grafok/dijkstra2}\hfill \hfill
         \end{figure}
+        \item Az alábbi feszítőfákat az $a$ csúcsokból indított BFS után kaptuk meg. Hogy nézhetett ki az eredeti gráf az egyes esetekben? 
+        \begin{figure}[!h]
+            \centering
+            \begin{subfigure}{0.2\textwidth}
+                \centering
+                \includestandalone[width=0.65\textwidth]{../grafok/bfs_after_1}
+            \end{subfigure}
+            \begin{subfigure}{0.2\textwidth}
+                \centering		
+                \includestandalone[width=0.65\textwidth]{../grafok/bfs_after_2}
+            \end{subfigure}
+            \begin{subfigure}{0.2\textwidth}
+                \centering
+                \includestandalone[width=0.65\textwidth]{../grafok/bfs_after_3}
+            \end{subfigure}
+            \begin{subfigure}{0.2\textwidth}
+                \centering
+                \includestandalone[width=0.65\textwidth]{../grafok/bfs_after_4}
+            \end{subfigure}
+        \end{figure}
+
         % \item Határozzuk meg az alábbi bal oldali gráfban a legrövidebb utakat az $s$ és a többi csúcs között a Bellman-Ford algoritmussal!
         % \begin{figure}[h]
         %     \centering
@@ -71,19 +71,19 @@
             \centering
             \begin{subfigure}{0.24\textwidth}
                 \centering
-                \includestandalone[width=\textwidth]{../grafok/dijkstra_small_7}
+                \includestandalone[width=0.9\textwidth]{../grafok/dijkstra_small_7}
             \end{subfigure}
             \begin{subfigure}{0.24\textwidth}
                 \centering
-                \includestandalone[width=\textwidth]{../grafok/dijkstra_small_8}
+                \includestandalone[width=0.9\textwidth]{../grafok/dijkstra_small_8}
             \end{subfigure}
             \begin{subfigure}{0.24\textwidth}
                 \centering
-                \includestandalone[width=\textwidth]{../grafok/dijkstra_small_9}
+                \includestandalone[width=0.9\textwidth]{../grafok/dijkstra_small_9}
             \end{subfigure}
             \begin{subfigure}{0.24\textwidth}
                 \centering
-                \includestandalone[width=\textwidth]{../grafok/dijkstra_small_10}
+                \includestandalone[width=0.9\textwidth]{../grafok/dijkstra_small_10}
             \end{subfigure}
         \end{figure}
 
