Dijkstra feladatban irányítottá tettem az éleket, így a bevett csúcsok között nem lesz rövidebb út a bevetlen csúcsokon keresztül

--- a/grafok/dijkstra_small_10.tex
+++ b/grafok/dijkstra_small_10.tex
@@ -53,13 +53,13 @@
     \draw[dashed] (b) -- (empty4);
 
     % edges between inside and outside nodes
-    \draw[-] (a) to node[edgelabel] {$1$} (d);
-    \draw[-] (a) to node[edgelabel] {$0$} (e);
-    \draw[-] (a) to node[edgelabel, near start] {$-8$} (f);
-    \draw[-] (b) to node[edgelabel] {$1$} (e);
-    \draw[-] (c) to node[edgelabel, near start] {$3$} (e);
-    \draw[-] (c) to node[edgelabel] {$-3$} (g);
-    \draw[-] (c) to node[edgelabel] {$1$} (f);
+    \draw[->] (a) to node[edgelabel] {$1$} (d);
+    \draw[->] (a) to node[edgelabel] {$0$} (e);
+    \draw[->] (a) to node[edgelabel, near start] {$-8$} (f);
+    \draw[->] (b) to node[edgelabel] {$1$} (e);
+    \draw[->] (c) to node[edgelabel, near start] {$3$} (e);
+    \draw[->] (c) to node[edgelabel] {$-3$} (g);
+    \draw[->] (c) to node[edgelabel] {$1$} (f);
 
 \end{tikzpicture}
 \end{document}
