--- a/grafok/dijkstra_small_7.tex
+++ b/grafok/dijkstra_small_7.tex
@@ -53,13 +53,13 @@
     \draw[dashed] (b) -- (empty4);
 
     % edges between inside and outside nodes
-    \draw[-] (a) to node[edgelabel] {$1$} (d);
-    \draw[-] (a) to node[edgelabel] {$2$} (e);
-    \draw[-] (a) to node[edgelabel, near start] {$3$} (f);
-    \draw[-] (b) to node[edgelabel] {$4$} (e);
-    \draw[-] (c) to node[edgelabel] {$5$} (e);
-    \draw[-] (b) to node[edgelabel] {$6$} (g);
-    \draw[-] (c) to node[edgelabel] {$7$} (g);
+    \draw[->] (a) to node[edgelabel] {$1$} (d);
+    \draw[->] (a) to node[edgelabel] {$2$} (e);
+    \draw[->] (a) to node[edgelabel, near start] {$3$} (f);
+    \draw[->] (b) to node[edgelabel] {$4$} (e);
+    \draw[->] (c) to node[edgelabel] {$5$} (e);
+    \draw[->] (b) to node[edgelabel] {$6$} (g);
+    \draw[->] (c) to node[edgelabel] {$7$} (g);
 
 \end{tikzpicture}
 \end{document}
