--- a/grafok/dijkstra_small_8.tex
+++ b/grafok/dijkstra_small_8.tex
@@ -53,14 +53,14 @@
     \draw[dashed] (b) -- (empty4);
 
     % edges between inside and outside nodes
-    \draw[-] (a) to node[edgelabel] {$4$} (d);
-    \draw[-] (a) to node[edgelabel] {$4$} (e);
-    \draw[-] (a) to node[edgelabel, near start] {$4$} (f);
-    \draw[-] (b) to node[edgelabel] {$1$} (e);
-    \draw[-] (b) to node[edgelabel, near start] {$1$} (f);
-    \draw[-] (c) to node[edgelabel] {$5$} (e);
-    \draw[-] (c) to node[edgelabel] {$5$} (f);
-    \draw[-] (c) to node[edgelabel] {$5$} (g);
+    \draw[->] (a) to node[edgelabel] {$4$} (d);
+    \draw[->] (a) to node[edgelabel] {$4$} (e);
+    \draw[->] (a) to node[edgelabel, near start] {$4$} (f);
+    \draw[->] (b) to node[edgelabel] {$1$} (e);
+    \draw[->] (b) to node[edgelabel, near start] {$1$} (f);
+    \draw[->] (c) to node[edgelabel] {$5$} (e);
+    \draw[->] (c) to node[edgelabel] {$5$} (f);
+    \draw[->] (c) to node[edgelabel] {$5$} (g);
 
 \end{tikzpicture}
 \end{document}
