--- a/grafok/dijkstra_small_9.tex
+++ b/grafok/dijkstra_small_9.tex
@@ -53,12 +53,12 @@
     \draw[dashed] (b) -- (empty4);
 
     % edges between inside and outside nodes
-    \draw[-] (a) to node[edgelabel] {$3000$} (d);
-    \draw[-] (a) to node[edgelabel] {$2000$} (e);
-    \draw[-] (a) to node[edgelabel, near start] {$3000$} (f);
-    \draw[-] (b) to node[edgelabel] {$42$} (e);
-    \draw[-] (c) to node[edgelabel, near start] {$14000605$} (e);
-    \draw[-] (c) to node[edgelabel] {$69420$} (g);
+    \draw[->] (a) to node[edgelabel] {$3000$} (d);
+    \draw[->] (a) to node[edgelabel] {$2000$} (e);
+    \draw[->] (a) to node[edgelabel, near start] {$3000$} (f);
+    \draw[->] (b) to node[edgelabel] {$42$} (e);
+    \draw[->] (c) to node[edgelabel, near start] {$14000605$} (e);
+    \draw[->] (c) to node[edgelabel] {$69420$} (g);
 
 \end{tikzpicture}
 \end{document}
