elírás a ZH-2011 feladatban

--- a/src/gyak7.tex
+++ b/src/gyak7.tex
@@ -45,7 +45,7 @@
 
             \item \textbf{[PZH-2010]} Egy $12$ egység hosszú drótból szeretnénk elkészíteni egy egységkocka élvázát, úgy, hogy a kocka csúcsainál forrasztunk. Legkevesebb hány darabra kell felvágni ehhez az eredeti drótunkat? Mi a válasz akkor, ha a testátlóknak is benne kell lenniük az élvázban, és persze a kiindulási drótunk is $4$ testátlónyival hosszabb?
 
-            \item \textbf{[ZH-2011]} Tegyük fel, hogy a $16$ pontú $K_{16}$ teljes gráf éleit $4$-féle színnel színeztük ki úgy, hogy minden egyes színre az adott színnel színezett élek reguláris gráfot alkotnak $K_{16}$ csúcsain. Igazoljuk, hogy a kiválasztott két szín a $4$ közül úgy, hogy az e két színnel színezett élekből található $K_{16}$-nak Hamilton-köre.
+            \item \textbf{[ZH-2011]} Tegyük fel, hogy a $16$ pontú $K_{16}$ teljes gráf éleit $4$-féle színnel színeztük ki úgy, hogy minden egyes színre az adott színnel színezett élek reguláris gráfot alkotnak $K_{16}$ csúcsain. Igazoljuk, hogy kiválasztható két szín a $4$ közül úgy, hogy az e két színnel színezett élekből található $K_{16}$-nak Hamilton-köre.
 
             \item \textbf{[PZH-2011]} Tudjuk, hogy a $99$ csúcsú, egyszerű $G$ gráf maximális fokszáma $\Delta(G)=30$, másrészt $G$-nek van Euler-köre. Mutassuk meg, hogy a $\bar{G}$ komplementergráfnak is van Euler-köre.
 
