--- a/src/gyak8.tex
+++ b/src/gyak8.tex
@@ -24,12 +24,28 @@
         \noindent\makebox[\textwidth][c]{\Large 8. gyakorlat}
         \begin{enumerate}
 
-            \item Szivárog az oxigén a nemzetközi űrállomáson! Az alábbi gráf az űrállomás egyes helyiségeit és az azokat összekötő folyosókat ábrázolja. A folyosókon levő számok azt jelentik, hogy mennyibe kerülne az adott folyosón a légmentes szigetelés felújítása. A Cafeteria helyiségben van egy működő oxigén szintetizátor, amely termeli az oxigént a Cafeteria-ban. Ha két helyiség között felujított folyosó fut, akkor a helyiségek oxigénszintje ki tud egyenlítődni. Továbbá lehetőségünk van egyes termekbe $3$ költségért új oxigén szintetizátort telepíteni (termenként egyet). Mi a legolcsóbb megoldás, ami biztosítja az oxigénellátást minden szobában?
+            \item \textbf{[PZH-2019]} Hányféleképpen lehet $10$ óvodásnak kiosztani $3$ piros, $3$ fehér és $4$ zöld építőkockát, néhány egyforma plüssrépát és plüssbrokkolit úgy, hogy mindenki egy kockát és egy plüsszsöldséget kapjon? (Mindkét fajta plüssjószág korlátlan számban áll rendelkezésre.)
+            
+            \item \textbf{[PZH-2019]} Tegyük fel, hogy rendre $0, 1, 1, 1, 1, 1, 2, 2, 3$ a $G$ egyszerű gráf csúcsainak fokszámai. Igaz-e, hogy bárhogyan is húzunk be $G$-be négy további élt, az így kapott gráfban bizonyosan lesz kör?
+ 
+            \item \textbf{[ZH-2019]} Az alábbi ábrán látahtó $G$ gráf egy mélységi fája. Tudjuk, hogy $gh$ és $hi$ a $G$ élei. Lehetnek-e $G$-ben $d$ és $e$ csúcsok szomszédosak?
             \begin{figure}[!h]
-                    \centering
-                    \includestandalone{../grafok/among_us_map}
+                \centering
+                \includestandalone{../grafok/dfs_2019zh_1}
             \end{figure}
 
+            \item Szivárog az oxigén a nemzetközi űrállomáson! Az alábbi gráf az űrállomás egyes helyiségeit és az azokat összekötő folyosókat ábrázolja. A folyosókon levő számok azt jelentik, hogy mennyibe kerülne az adott folyosón a légmentes szigetelés felújítása. A Cafeteria helyiségben van egy működő oxigén szintetizátor, amely termeli az oxigént a Cafeteria-ban. Ha két helyiség között felujított folyosó fut, akkor a helyiségek oxigénszintje ki tud egyenlítődni. Továbbá lehetőségünk van egyes termekbe $3$ költségért új oxigén szintetizátort telepíteni (termenként egyet). Mi a legolcsóbb megoldás, ami biztosítja az oxigénellátást minden szobában?
+            \begin{figure}[!h]
+                \centering
+                \includestandalone{../grafok/among_us_map}
+            \end{figure}
+            
             \item EMERGENCY MEETING! Megszólalt a riadó. Pont úgy adódott, hogy az űrállomáson kutató $9$ űrhajós mindegyike más teremben tartózkodott a riadó megszólalásakor. A riadókor mindegyik elindult a Cafeteria-ba a lehető legrövidebb úton. A fenti gráf az űrbázis összeköttetéseit mutatja, az éleken az idők pedig azt, hogy hány percbe telik végigmenni az adott folyosón. Milyen sorrendben érkeztek meg az űrhajósok a Cafeteria-ba.
+            
+            \item KÉSIK A CYBERPUNK 2077! Ezért Keanu Reeves megkérte Rick Sanchez-t, hogy utólag készítse el neki az eredeti projekt PERT diagramját, hogy utána visszautazhasson az időben és megakadályozza a késéseket. Mely időpontokba kell visszautaznia Keanu-nak és a projekt mely pontjánál kell megakadályoznia a késést, hogy ne késsen a Cyberpunk~2077 megjelenése?
+            \begin{figure}[!h]
+                \centering
+                \includestandalone{../grafok/pert6}
+            \end{figure}
         \end{enumerate}
     \end{document}
