--- a/src/gyak1.tex
+++ b/src/gyak1.tex
@@ -8,9 +8,11 @@
 
     \usepackage{multicol}
 \begin{document}
-    \noindent\makebox[\textwidth][c]{\Large A számítástudomány alapjai 2020. I. félév}
+    \noindent\makebox[\textwidth][c]{\Large A számítástudomány alapjai 2021. I. félév}
     \noindent\makebox[\textwidth][c]{\Large 1. gyakorlat}
     \begin{enumerate}
+        \item Morty rettenetesen fél a koronavírustól. Ezért úgy döntött, hogy a lehetséges vakcinák közül (Pfizer, Moderna, AstraZeneca, Jansen, Sputnik, Sinopharm) az összessel beoltatja magát kétszer. Hányféleképpen kérheti ekkor az oltásokat, ha a vakcinák sorrendje számít, de két ugyanolyan típusú vakcinát természetesen nem különböztetünk meg? Summer annyira nem félős, ő nem kér mindegyikből, de legalább egyből igen, és ha valamilyen típusúból kér, akkor mindenképp beoltatja magát azzal kétszer. Hány féle sorrendben kérheti Summer a vakcinákat?
+        
         \item A Marvel Cinematic University-n véletlenül rosszul írták ki a Gyógy- és strandfürdők nevű $2$ kredites tárgyat a Neptunban, ezért idén a $9689$ hallgató közül csak egy veheti azt fel. A tárgy során a hallgatónak az univerzum $17$ gyógyfürdőjéből és $17$ strandjából kell választania egyet-egyet és meglátogatni azokat. Az év végén a jegyét ($1$ és $5$ között) a hallgató a fürdőkről megírt esszéjére kapja. A kurzus előadója, Doktor Strange nem szereti a meglepetéseket, ezért az Agamotto szemével betekintett a jövőbe, hogy lássa, melyik hallgató, mely fürdőkről fog írni és milyen jegyet fog kapni az esszéjére.
         \begin{enumerate}
             \item Hány lehetséges kimenetelt látott a Doktor?
@@ -24,7 +26,7 @@
             \item Hány esetben nem bukott meg mindenki?
         \end{enumerate}
 
-        \item A rivális Mercedes istálló legyőzésének érdekében egy új stratégiával rukkoltak elő a Ferrari fejesei. A szingapúri nagydíjon bevetik a $32$ kiállásos taktikát, melynek alapja, hogy minden kiállásnál az előzőtől különböző gumiszettet tesznek fel az autóra. Hányféle gumistratégiája lehet a Ferrari-nak, ha (egy kiskaput átjátszva) mind a $9$ fajta gumikeverékből végtelen sok áll a rendelkezésükre?
+        \item A rivális Mercedes istálló legyőzésének érdekében egy új stratégiával rukkoltak elő a Ferrari fejesei. Az olasz nagydíjon bevetik a $32$ kiállásos taktikát, melynek alapja, hogy minden kiállásnál az előzőtől különböző gumiszettet tesznek fel az autóra. Hányféle gumistratégiája lehet a Ferrari-nak, ha (egy kiskaput átjátszva) mind a $9$ fajta gumikeverékből végtelen sok áll a rendelkezésükre?
         
         \item A $2019$-es félévben a $42$-es tankörbeli $35$ hallgató összesen $100$ pontot ért el a második számtud ZH-ján (egy hallgató akár $100$ pontot is elérhet). Hányféleképpen történhetett ez meg, ha az egyes ZH pontszámok akármekkora nemnegatív egészek lehetnek?
         
@@ -59,7 +61,7 @@
                 \item Legfeljebb hány szakaszból állhatott a verseny, ha tudjuk, hogy semelyik két szakasznak végén nem lett ugyanaz az első $10$ befutó? (Most számít a sorrend.)
             \end{itemize}
         
-        \item A Kőbánya Open tenisztorna döntőjében Alexander Zverev és Daniil Medvedev csaptak össze. A szettek végeredménye $5-7$, $3-6$, $7-5$, $6-4$, $4-6$ lett (Medvedev javára). Hányféle sorrendben történhetett meg a pontszerzés, ha a tenisz szabályainak értelmében egy szett minimum $6$ pontig és legalább $2$ pontos különbségig megy?
+        \item A Kőbánya Open tenisztorna döntőjében Novak Djokovic és Daniil Medvedev csaptak össze. A szettek végeredménye $5-7$, $3-6$, $7-5$, $6-4$, $4-6$ lett (Medvedev javára). Hányféle sorrendben történhetett meg a pontszerzés, ha a tenisz szabályainak értelmében egy szett minimum $6$ pontig és legalább $2$ pontos különbségig megy?
 
         \item
         A rendszámreform előtt a magyar rendszámok alakja BB-SS-SS volt (B=betű,
