--- a/src/gyak10.tex
+++ b/src/gyak10.tex
@@ -102,11 +102,11 @@
             \item Ujjgyakorlatok (\textit{Études}):
             \begin{itemize}
                 \item Egy összefüggő, egyszerű gráf síkbarajzoltja $20$ csúcsból és $19$ élből áll. Hány tartománya van?
-                \item Egy egyszerű gráfnak $8$ csúcsa van, melyek közül $3$ izolált pont. A maradék $5$ csúcs $4$ tartományra osztja a síkot, hány éle lehet?
+                \item Egy egyszerű gráfnak $8$ csúcsa van, melyek közül $3$ izolált pont. A maradék $5$ csúcs egy komponenst alkot és $4$ tartományra osztja a síkot, hány éle lehet?
                 \item Egy $8$ csúcsú összefüggő egyszerű gráf $5$ tartományra osztja a síkot. Hány éle van?
+                \item Egy $6$ csúcsú összefüggő egyszerű gráfnak $10$ éle van. Hány tartományra osztja a síkot a gráf síkbarajzoltja?
                 \item Egy $6$ csúcsú összefüggő egyszerű gráfnak $13$ éle van. Hány tartományra osztja a síkot a gráf síkbarajzoltja?
-                \item Egy $6$ csúcsú összefüggő egyszerű gráfnak $15$ éle van. Hány tartományra osztja a síkot a gráf síkbarajzoltja?
-                \item Egy egyszerű gráfnak $8$ csúcsa van, melyek közül $3$ izolált pont. A maradék $5$ csúcsnak $10$ éle van. Hány tartományra oszthatja a síkot a gráfnak egy lerajzolása?
+                \item Egy egyszerű gráfnak $8$ csúcsa van, melyek közül $3$ izolált pont. A maradék $5$ csúcs egy komponenst alkot és $10$ éle van. Hány tartományra oszthatja a síkot a gráfnak egy lerajzolása?
             \end{itemize}
         
             \item Töröljünk ki az alábbi gráfokból csúcsokat vagy éleket úgy, hogy a megmaradt gráf topologikusan izomorf legyen egy $K_5$-tel vagy egy $K_{3,3}$-mal, ahol a $K_5$ vagy $K_{3,3}$ csúcsait a fekete négyzetek jelölik!
