--- a/src/gyak11.tex
+++ b/src/gyak11.tex
@@ -17,7 +17,7 @@
     \usepackage{multicol}
     
     \begin{document}
-        \noindent\makebox[\textwidth][c]{\Large A számítástudomány alapjai 2020. I. félév}
+        \noindent\makebox[\textwidth][c]{\Large A számítástudomány alapjai 2021. I. félév}
         \noindent\makebox[\textwidth][c]{\Large 11. gyakorlat}
         
         \begin{enumerate}
@@ -49,7 +49,7 @@
             \item Oldogassunk lineáris kongruenciákat:
             \begin{multicols}{3}			
                 \begin{enumerate}
-                    \item $49^{49} \equiv 3 \ (15)$
+                    \item $49^{49} x \equiv 3 \ (15)$
                     \item $3^{80} x \equiv 23 \ (100)$
                     \item $4^{444} x \equiv 214 \ (363)$
                 \end{enumerate}
