--- a/src/gyak12.tex
+++ b/src/gyak12.tex
@@ -27,7 +27,31 @@
         % \noindent\centering\parbox[c][7em][c]{0.8\textwidth}{\centering Polinomiális visszavezethetőség (Karp-redukció), NP-teljesség, Cook-Levin tétel, nevezetes NP-teljes problémák: SAT, HAM, 3-SZÍN, k-SZÍN, MAXFTN, MAXKLIKK. Prímtesztelés, Fermat-teszt. Nyilvános kulcsú titkosírás, digitális aláírás. Az RSA titkosítási módszer.}
         
         \begin{enumerate}
-            
+            \item Rajzoljuk le az alábbi gráfok duálisait!
+            \begin{figure}[ht]
+                \centering
+                \begin{subfigure}{0.2\textwidth}
+                    \centering
+                    \includestandalone[scale=0.85]{../grafok/dual1}
+                    \caption{}
+                \end{subfigure}
+                \begin{subfigure}{0.2\textwidth}
+                    \centering
+                    \includestandalone[scale=0.85]{../grafok/dual2}
+                    \caption{}
+                \end{subfigure}
+                \begin{subfigure}{0.2\textwidth}
+                    \centering
+                    \includestandalone[scale=0.85]{../grafok/dual3}
+                    \caption{}
+                \end{subfigure}
+                \begin{subfigure}{0.2\textwidth}
+                    \centering
+                    \includestandalone[scale=0.85]{../grafok/dual4}
+                    \caption{}
+                \end{subfigure}
+            \end{figure}
+
             \item Bizonyítsuk be az alábbi példákban, hogy $\Pi_a \preceq \Pi_b$:
             \begin{enumerate}
                 \item $\Pi_a$: Adott $n$ szám páros-e? \\
